--- a/SimpleBot.csproj
+++ b/SimpleBot.csproj
@@ -133,19 +133,22 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connection\MongoDB.cs" />
+    <Compile Include="Model\ModelMongo\MongoConnection.cs" />
+    <Compile Include="Model\ModelSQL\SqlConnection.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Logic\Message.cs" />
-    <Compile Include="Logic\MessageBson.cs" />
+    <Compile Include="Model\ModelMongo\MessageBson.cs" />
+    <Compile Include="Model\ModelSQL\MessageSQL.cs" />
     <Compile Include="Logic\SimpleBotUser.cs" />
     <Compile Include="Logic\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\UserProfileRepository.cs" />
+    <Compile Include="Repository\UserProfileMongoRepository.cs" />
     <Compile Include="Repository\IUserProfileRepository.cs" />
     <Compile Include="Repository\UserProfileMongo.cs" />
+    <Compile Include="Repository\UserProfileSqlRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
